test/invalid/baseline/module.txt
Syntax error at line 2 in module.widl:
module gfx {
^ Unrecognised tokens
